--- a/Bouncing Balls/index.html
+++ b/Bouncing Balls/index.html
@@ -10,8 +10,7 @@
 
 <body>
     <canvas></canvas>
-    <!--Continue video on 21:37
-        interacting with the canvas| html5 canvas tutorial ep 4-->
+    <!--Resize screen first for it to work-->
     <script src="canvas.js"></script>
 </body>
 
